--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,17 +5,20 @@
   </head>
   <body> 
     <h1>My First Webpage</h1>
-    <h2>Written with a litle guidance from Moringa School</h2>
+    <h2>Written with a litle guidance from <em>Moringa School</em></h2>
 
       <p>Hello, world!</p>
-      <p>Welcome to my first webpage!</p>
+      <p>Welcome to my <strong>first webpage</strong>!</p>
 
       <p>Here are some things I'm going to learn about coding:<
-      <ul> 
+       <ul> 
         <li>HTML</li>
         <li>CSS</li>
-        <LI>JavaScript</LI>
+        <li>JavaScript</LI>
         <li>And a lot more!</li>
-      </ul>
+       </ul> 
+      <p>Here is a link to my <a href="my-favorite-things.html">favorite things</a>.</p>
+         <img src="elephant.jpg" alt="A photo of an elephant">
   </body>
+     <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
 </html>
