--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -2,6 +2,9 @@
 <html>
   <head> 
     <title> These are my favorite things</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+
+
   </head>
   <body>
     <h1>My Favorite things</h1>
