--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-        <title>My first webpage!</title>
+        <title>My first webpage!</title> 
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+
   </head>
   <body> 
-    <h1>My First Webpage!</h1>
+    <h1>My First Webpage</h1>
     <h2>Written with a litle guidance from <em>Moringa School</em></h2>
 
       <p>Hello, world!</p>
