add more styles

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -6,15 +6,15 @@
 
   </head>
   <body> 
-    <h1>My First Webpage</h1>
+    <h1>My <strong>First webpage</strong></h1>
     <h2>Written with a litle guidance from <em>Moringa School</em></h2>
 
       <p>Hello, world!</p>
       <p>Welcome to my <strong>first webpage</strong>!</p>
 
-      <p>Here are some things I'm going to learn about coding:<
+      <p>Here are some things I'm going to learn about coding:
        <ul> 
-        <li>HTML</li>
+        <li><em>HTML</em></li>
         <li>CSS</li>
         <li>JavaScript</LI>
         <li>And a lot more!</li>
